--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.0.1",
         "aos": "^2.3.4",
+        "axos": "^0.0.1",
         "react": "^19.0.0",
         "react-countup": "^6.5.3",
         "react-dom": "^19.0.0",
